Finish Home Page, Started on Register and Login Page

--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
 
-  <body class="bodybody">
+  <body>
     <div class="navBackground">
       <img class="theHubWord" src="static/images/hubLogo.png" />
       {% comment %}
@@ -25,7 +25,7 @@
       <a href="{%url 'gallery-page'%}">Gallery</a>
       <a href="{%url 'menu-page'%}">Menu</a>
 
-      <a href="{%url 'cart-page'%}">Menu</a>
+      <a href="{%url 'cart-page'%}">Cart</a>
       <a href="{%url 'about-page'%}">About Us</a>
 
       <a href="{%url 'home-page'%}">Home</a>
