--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -1,11 +1,5 @@
 {%load static %}%}
 <!DOCTYPE html>
-<<<<<<< HEAD
-
-
-    <style>
-    
-=======
 <html>
   <head>
     <title>Login</title>
@@ -23,11 +17,6 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-
-    <style>
-<<<<<<< HEAD
-     
-=======
       {% comment %} body,
       html {
         margin: 0;
@@ -35,7 +24,6 @@
         height: 100%;
         background: #83c7c0;
       }
->>>>>>> 2c79368e0353b39bc5f79a3ca0c82fa9648ca3aa
       .user_card {
         width: 900px;
         height: 39em;
@@ -132,12 +120,15 @@
      
         border-radius: 3em;
       } {% endcomment %}
->>>>>>> bba8f029a4c456be502fe679bddb9d6350c91ee5
     </style>
   </head>
   <body>
     <div class="navBackground">
-      <img class="theHubWord" src="static/images/blurredCrop.jpg" />
+      <img
+        class="theHubWord"
+        src="{%static 'images/hubLogo.png'%}"
+        alt="The Hub Logo"
+      />
     </div>
     <div class="container h-100">
       <div class="box1">
@@ -180,4 +171,8 @@
       </div>
     </div>
   </body>
+  <footer class="footer">
+    <p class="footerWords">The Hub Bistro & Coffee House</p>
+    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+  </footer>
 </html>
