--- a/HUB/static/login.css
+++ b/HUB/static/login.css
@@ -28,11 +28,8 @@ html {
 }
 
 .theHubWord {
-  font-family: niconne, fantasy;
-  font-size: 50px;
-  margin-left: 230px;
-  margin-top: 60px;
-  margin-bottom: -10px;
+  width: 20%;
+  height: 50%;
 }
 
 .navBackground {
@@ -50,4 +47,21 @@ html {
   width: 100%;
   background-color: #83c7c0;
   text-align: center;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #83c7c0;
+  text-align: center;
+}
+
+.footerWords {
+  color: white;
+}
+
+.copy {
+  color: white;
 }
