--- a/HUB/static/register.css
+++ b/HUB/static/register.css
@@ -8,6 +8,7 @@ body {
 html {
   width: 100%;
 }
+
 .user_card_register {
   width: 350px;
   background: white;
@@ -47,4 +48,35 @@ html {
   width: 100%;
   background-color: #83c7c0;
   text-align: center;
+}
+
+.footerWords {
+  color: white;
+}
+
+.copy {
+  color: white;
+}
+
+.register_word {
+  margin-top: 150px;
+  text-align: center;
+  margin-bottom: -150px;
+}
+
+/* .register_text_box{
+
+} */
+
+.register_button {
+  background-color: #83c7c0;
+}
+
+.buttonContainer {
+  /* margin-bottom: -200px;
+  position: absolute; */
+  /* top: 50%;
+  left: 50%; */
+  /* -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
