--- a/HUB/static/styles.css
+++ b/HUB/static/styles.css
@@ -6,12 +6,12 @@ body {
 }
 
 .navBackground a {
-  background-color: black;
   display: block;
   color: white;
   padding: 14px 16px;
   text-decoration: none;
   float: right;
+  margin-top: 80px;
 }
 
 .navBackground {
