--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -1,44 +1,46 @@
 {% extends 'base.html' %} {%block content%} {%load static%}
 
-<button type="button">Breakfast</button>
-<button type="button">Salads</button>
-<button type="button">Pastries & More</button>
-<button type="button">Sandwiches & Wraps</button>
-<button type="button">Brewed Coffees</button>
+<div class="movecart">
+  <button type="button">Breakfast</button>
+  <button type="button">Salads</button>
+  <button type="button">Pastries & More</button>
+  <button type="button">Sandwiches & Wraps</button>
+  <button type="button">Brewed Coffees</button>
 
-<button type="button">Espresso</button>
+  <button type="button">Espresso</button>
 
-<button type="button">Specialty Drinks</button>
-<button type="button">lended</button>
+  <button type="button">Specialty Drinks</button>
+  <button type="button">lended</button>
 
-<section class="container content-section">
-  <h2 class="section-header"></h2>
-  <div class="shop-items">
-    <div class="shop-item">
-      <span class="shop-item-title">T-Shirt</span>
+  <section class="container content-section">
+    <h2 class="section-header"></h2>
+    <div class="shop-items">
+      <div class="shop-item">
+        <span class="shop-item-title">T-Shirt</span>
 
-      <div class="shop-item-details">
-        <span class="shop-item-price">$19.99</span>
-        <button class="btn btn-primary shop-item-button" type="button">
-          ADD TO CART
-        </button>
+        <div class="shop-item-details">
+          <span class="shop-item-price">$19.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="container content-section">
-  <h2 class="section-header">CART</h2>
-  <div class="cart-row">
-    <span class="cart-item cart-header cart-column">ITEM</span>
-    <span class="cart-price cart-header cart-column">PRICE</span>
-    <span class="cart-quantity cart-header cart-column">QUANTITY</span>
-  </div>
-  <div class="cart-items"></div>
-  <div class="cart-total">
-    <strong class="cart-total-title">Total</strong>
-    <span class="cart-total-price">$0</span>
-  </div>
-  <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
-</section>
+  </section>
+  <section class="container content-section">
+    <h2 class="section-header">CART</h2>
+    <div class="cart-row">
+      <span class="cart-item cart-header cart-column">ITEM</span>
+      <span class="cart-price cart-header cart-column">PRICE</span>
+      <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+    </div>
+    <div class="cart-items"></div>
+    <div class="cart-total">
+      <strong class="cart-total-title">Total</strong>
+      <span class="cart-total-price">$0</span>
+    </div>
+    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+  </section>
+</div>
 
 {% endblock %}
