--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -1,19 +1,18 @@
 {% extends 'base.html' %} {%block content%} {%load static%}
 
 <div class="movecart">
-  <button type="button">Breakfast</button>
-  <button type="button">Salads</button>
-  <button type="button">Pastries & More</button>
-  <button type="button">Sandwiches & Wraps</button>
-  <button type="button">Brewed Coffees</button>
+  <button type="button" value="1">Breakfast</button>
+  <button type="button" value="2">Salads</button>
+  <button type="button" value="3">Pastries & More</button>
+  <button type="button" value="4">Sandwiches & Wraps</button>
+  <button type="button" value="5">Brewed Coffees</button>
 
-  <button type="button">Espresso</button>
+  <button type="button" value="6">Espresso</button>
 
-  <button type="button">Specialty Drinks</button>
-  <button type="button">lended</button>
+  <button type="button" value="7">Specialty Drinks</button>
+  <button type="button" value="8">Blended</button>
 
-  <section class="container content-section">
-    <h2 class="section-header"></h2>
+  <div id="divid">
     <div class="shop-items">
       <div class="shop-item">
         <span class="shop-item-title">T-Shirt</span>
@@ -26,6 +25,7 @@
         </div>
       </div>
     </div>
+  </div>
   </section>
   <section class="container content-section">
     <h2 class="section-header">CART</h2>
