--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -13,18 +13,8 @@
   <button type="button" value="8">Blended</button>
 
   <div id="divid">
-    <div class="shop-items">
-      <div class="shop-item">
-        <span class="shop-item-title">T-Shirt</span>
-
-        <div class="shop-item-details">
-          <span class="shop-item-price">$19.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-    </div>
+   
+      
   </div>
   </section>
   <section class="container content-section">
@@ -39,7 +29,7 @@
       <strong class="cart-total-title">Total</strong>
       <span class="cart-total-price">$0</span>
     </div>
-    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+    <button class="btn-purchase" type="button">PURCHASE</button>
   </section>
 </div>
 
