--- a/HUB/templates/about.html
+++ b/HUB/templates/about.html
@@ -1,1 +1,33 @@
-{% extends 'base.html' %} {%block content%} {% endblock %}
+{%load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}" />
+    <title>Document</title>
+  </head>
+
+  <body>
+    <div class="navBackground">
+      <img class="theHubWord" src="/static/images/hub.png" />
+      <a href="{%url 'menu-page'%}"
+        ><img class="cartImage" src="/static/images/cart.png"
+      /></a>
+      <a href="{%url 'logout'%}">Logout</a>
+      <a href="{%url 'register-page'%}">Register</a>
+      <a href="{%url 'login-page'%}">Login</a>
+      <a href="{%url 'gallery-page'%}">Gallery</a>
+      <a href="{%url 'menu-page'%}">Menu</a>
+      <a href="{%url 'cart'%}">Cart</a>
+      <a href="{%url 'about-page'%}">About Us</a>
+      <a href="{%url 'home-page'%}">Home</a>
+    </div>
+    
+  </body>
+  <footer class="footer">
+    <p class="footerWords">The Hub Bistro & Coffee House</p>
+    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+  </footer>
+</html>
