--- a/HUB/templates/about.html
+++ b/HUB/templates/about.html
@@ -20,11 +20,11 @@
       <a href="{%url 'login-page'%}">Login</a>
       <a href="{%url 'gallery-page'%}">Gallery</a>
       <a href="{%url 'menu-page'%}">Menu</a>
-      <a href="{%url 'cart'%}">Cart</a>
+      <a href="{%url 'cart-page'%}">Cart</a>
       <a href="{%url 'about-page'%}">About Us</a>
       <a href="{%url 'home-page'%}">Home</a>
     </div>
-    
+
   </body>
   <footer class="footer">
     <p class="footerWords">The Hub Bistro & Coffee House</p>
