--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -10,7 +10,7 @@
   <button type="button" value="6">Espresso</button>
 
   <button type="button" value="7">Specialty Drinks</button>
-  <button type="button" value="8">Blended</button>
+  <button type="button" value="8">Blended Coffees</button>
 
   <div id="divid">
    
