--- a/HUB/static/styles.css
+++ b/HUB/static/styles.css
@@ -255,10 +255,44 @@ img {
   margin-left: 100px;
 }
 .movecart {
-  margin-right: 10em;
+  margin-top: 10em;
+  text-align: center;
 }
 .buttons {
   color: white;
-  background-color: blue;
+  width: 8em;
+  background-color: black;
   border: none;
+}
+.shop-item {
+  border: solid 2px grey;
+  text-align: center;
+  background-color: black;
+  color: white;
+}
+
+.shop-item-title {
+  border: solid 2px black;
+}
+.cart-item {
+  padding-bottom: 4em;
+  text-align: center;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+
+  height: fit-content;
+  padding: 20px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 1px;
+  font-size: 20px;
+  text-align: center;
+}
+.btn-purchase {
+  padding-bottom: 2em;
 }
