--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -12,24 +12,32 @@
     <button type="button" value="7" class="buttons" >Specialty Drinks</button>
     <button type="button" value="8" class="buttons" >Blended</button>
     </div>
-    <div id="divid">
+    
+        <div id="divid">
     
         
-    </div>
+        </div>
+
     </section>
+    
     <section class="container content-section">
-        <h2 class="section-header">CART</h2>
-        <div class="cart-row">
-        <span class="cart-item cart-header cart-column">ITEM</span>
-        <span class="cart-price cart-header cart-column">PRICE</span>
-        <span class="cart-quantity cart-header cart-column">QUANTITY</span>
-        </div>
-        <div class="cart-items"></div>
-        <div class="cart-total">
-        <strong class="cart-total-title">Total</strong>
-        <span class="cart-total-price">$0</span>
-        </div>
-        <button class="btn-purchase" type="button">PURCHASE</button>
+        <div class="cart-item">
+            <section class="container content-section">
+                <h2 class="section-header">CART</h2>
+                <div class="cart-row">
+                   
+                </div>
+           
+                <div class="cart-items">
+                </div>
+            
+                <div class="cart-total">
+                    <strong class="cart-total-title">Total</strong>
+                    <span class="cart-total-price">$0</span>
+                </div>
+                <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+         </div>
+        
     </section>
 </body>
 
