--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -1,66 +1,36 @@
 {% extends 'base.html' %} {%block content%} {%load static%}
 <body>
-    <div class="movecart">
-    <button type="button" value="1" class="buttons" >Breakfast</button>
-    <button type="button" value="2" class="buttons" >Salads</button>
-    <button type="button" value="3" class="buttons" >Pastries & More</button>
-    <button type="button" value="4" class="buttons" >Sandwiches & Wraps</button>
-    <button type="button" value="5" class="buttons" >Brewed Coffees</button>
+  <div class="movecart">
+    <button type="button" value="1" class="buttons">Breakfast</button>
+    <button type="button" value="2" class="buttons">Salads</button>
+    <button type="button" value="3" class="buttons">Pastries & More</button>
+    <button type="button" value="4" class="buttons">Sandwiches & Wraps</button>
+    <button type="button" value="5" class="buttons">Brewed Coffees</button>
 
-    <button type="button" value="6" class="buttons" >Espresso</button>
+    <button type="button" value="6" class="buttons">Espresso</button>
 
-<<<<<<< HEAD
-
-  <button type="button" value="6" class="buttons">Espresso</button>
-
-  <button type="button" value="7" class="buttons">Specialty Drinks</button>
-  <button type="button" value="8" class="buttons">Blended Coffees</button>
-
-  <div id="divid">
-   
-      
+    <button type="button" value="7" class="buttons">Specialty Drinks</button>
+    <button type="button" value="8" class="buttons">Blended Coffees</button>
   </div>
-  </section>
+
+  <div id="divid"></div>
+
   <section class="container content-section">
-    <h2 class="section-header">CART</h2>
-    <div class="cart-row">
-      <span class="cart-item cart-header cart-column">ITEM</span>
-      <span class="cart-price cart-header cart-column">PRICE</span>
-      <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+    <div class="cart-item">
+      <h2 class="section-header">CART</h2>
+      <div class="cart-row"></div>
 
-    <
-=======
-    <button type="button" value="7" class="buttons" >Specialty Drinks</button>
-    <button type="button" value="8" class="buttons" >Blended</button>
->>>>>>> ab0c868c87ecf946b949e6159570993726a9ca15
+      <div class="cart-items"></div>
+
+      <div class="cart-total">
+        <strong class="cart-total-title">Total</strong>
+        <span class="cart-total-price">$0</span>
+      </div>
+      <button class="btn btn-primary btn-purchase" type="button">
+        PURCHASE
+      </button>
     </div>
-    
-        <div id="divid">
-    
-        
-        </div>
-
-    </section>
-    
-    <section class="container content-section">
-        <div class="cart-item">
-            <section class="container content-section">
-                <h2 class="section-header">CART</h2>
-                <div class="cart-row">
-                   
-                </div>
-           
-                <div class="cart-items">
-                </div>
-            
-                <div class="cart-total">
-                    <strong class="cart-total-title">Total</strong>
-                    <span class="cart-total-price">$0</span>
-                </div>
-                <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
-         </div>
-        
-    </section>
+  </section>
 </body>
 
 {% endblock %}
